<resources>
    <string name="app_name">RU Pizza</string>
    <string name="chicago_style">Chicago Style</string>
    <string name="pizza_pizza_menu">Pizza Pizza Menu</string>
    <string name="new_york_style">New York Style</string>
    <string name="current_order">Current Order</string>
    <string name="chicago_pizza_pizza">Chicago Pizza Pizza</string>
    <string name="ny_pizza_pizza">Chicago Pizza Pizza</string>
    <string name="add_to_order">Add to Order</string>
    <string name="small">Small</string>
    <string name="pizza_type">Pizza Type</string>
    <string name="available_toppings">Available Toppings</string>
    <string name="crust">Crust:</string>
    <string name="pizza_cost">Pizza Cost</string>
    <string name="ny_style_pizza">Ny Style Pizza</string>
    <string name="back">Back</string>
    <string name="medium">Medium</string>
    <string name="place_order">Place Order</string>
    <string name="clear">Clear</string>
    <string name="remove">Remove</string>
    <string name="total">Total:</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="subtotal">Subtotal:</string>
    <string name="tax">Tax:</string>
    <string name="all_orders">All Orders</string>
    <string name="large">Large</string>
    <string name="chicago_style_pizza">Chicago Style Pizza</string>
    <string name="add_topping">Add Toppings</string>
    <string name="order">Order #</string>
    <string name="ordernum">Order #</string>

</resources>